[tool.poetry]
name = "hique"
version = "0.1.0"
description = "An asynchronous not-really-an-ORM library for postgres databases."
authors = ["Ingmar Steen <iksteen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
